futures/testcrate/ui/nested.stderr
error[E0308]: mismatched types
  --> $DIR/nested.rs:10:19
   |
10 |             yield i * i;
   |                   ^^^^^ expected (), found integer
   |
   = note: expected type `()`
              found type `{integer}`

error[E0698]: type inside generator must be known in this context
  --> $DIR/nested.rs:10:13
   |
10 |             yield i * i;
   |             ^^^^^^^^^^^ cannot infer type for `{integer}`
   |
note: the type is part of the generator because of this `yield`
  --> $DIR/nested.rs:10:13
   |
10 |             yield i * i;
   |             ^^^^^^^^^^^

error[E0698]: type inside generator must be known in this context
 --> $DIR/nested.rs:5:1
  |
5 | #[async_stream]
  | ^^^^^^^^^^^^^^^ cannot infer type for `{integer}`
  |
note: the type is part of the generator because of this `yield`
 --> $DIR/nested.rs:5:1
  |
5 | #[async_stream]
  | ^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0308, E0698.
For more information about an error, try `rustc --explain E0308`.
